# mower_bot

./: CMakeLists.txt  README.md  package.xml
config/: bot.rviz  coverage_params.yaml  mower.rviz  my_controllers.yaml  nav2_params.yaml  nav_params.yaml  slam_params.yaml
description/: gazebo_control.xacro  inertial_macros.xacro  lidar.xacro  robot_core.xacro  ros2_control.xacro
launch/: coverage.launch.py  joystick.launch.py  monitor.launch.py  mower.launch.py  nav.launch.py  robot.launch.py  rplidar.launch.py  rsp.launch.py  sim.launch.py  slam.launch.py
mower_bot/: package.xml
mower_bot/config/: bot.rviz  my_controllers.yaml  nav2_params.yaml
mower_bot/description/: gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro
mower_bot/launch/: joystick.launch.py  mower.launch.py  rplidar.launch.py  rsp.launch.py  sim.launch.py  slam.launch.py
mower_bot/worlds/: box.world  obstacles.world
nav_api/: package.xml  setup.cfg  setup.py
nav_api/nav_api/: demo.py  nav_api.py  robot_navigator.py
rplidar_ros2/launch/: rplidar.launch.py
worlds/: bigger_box.world
